--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ReactNativeStarter",
-  "displayName": "React Native Starter"
+  "name": "BookStore",
+  "displayName": "Book Store"
 }
