--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "0.18.0",
+    "lodash": "^4.17.4",
     "react": "16.5.0",
     "react-native": "0.57.2",
+    "react-native-vector-icons": "^6.3.0",
     "react-navigation": "2.0.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-persist": "5.10.0",
-    "redux-saga": "0.16.0",
-    "axios": "0.18.0",
-    "lodash": "^4.17.4"
+    "redux-saga": "0.16.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
