--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-redux": "5.0.6",
     "redux": "3.7.2",
     "redux-persist": "5.10.0",
-    "redux-saga": "0.16.0"
+    "redux-saga": "0.16.0",
+    "react-native-material-ripple": "0.8.0",
+    "react-native-snackbar": "^0.5.3"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
