--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,15 @@ build/
 .gradle
 local.properties
 *.iml
+android/.project
+android/.gradle
+android/.settings/
+android/app/.classpath
+android/app/.project
+android/app/.settings/
+android/.project
+package-lock.json
+.history/
 
 # node.js
 #
