--- a/.gitignore
+++ b/.gitignore
@@ -29,15 +29,23 @@ build/
 .gradle
 local.properties
 *.iml
-android/.project
-android/.gradle
-android/.settings/
-android/app/.classpath
-android/app/.project
-android/app/.settings/
-android/.project
-package-lock.json
-.history/
+# /android/
+# Android
+# .idea
+# .gradle
+# local.properties
+# *.iml
+# /android/
+# build/
+# android/.project
+# android/.gradle
+# android/.settings/
+# android/app/.classpath
+# android/app/.project
+# android/app/.settings/
+# android/.project
+# package-lock.json
+# .history/
 
 # node.js
 #
