--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "axios": "0.18.0",
     "lodash": "^4.17.4",
     "react": "16.5.0",
-    "react-native": "0.57.2",
+    "react-native": "0.57.1",
     "react-native-material-ripple": "0.8.0",
     "react-native-smart-splash-screen": "^2.3.5",
     "react-native-snackbar": "^0.5.3",
