--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.4",
     "react": "16.5.0",
     "react-native": "0.57.1",
+    "react-native-firebase": "^5.2.3",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-loading-spinner-overlay": "0.5.2",
     "react-native-material-ripple": "0.8.0",
