--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-loading-spinner-overlay": "0.5.2",
     "react-native-material-ripple": "0.8.0",
+    "react-native-picker-dropdown": "^0.1.2",
     "react-native-smart-splash-screen": "^2.3.5",
     "react-native-snackbar": "^0.5.3",
     "react-native-vector-icons": "^6.3.0",
