splash screen added

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -11,6 +11,8 @@ target 'BookStore' do
   target 'BookStore-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   end
 
   target 'BookStoreTests' do
