app icon updated

--- a/.gitignore
+++ b/.gitignore
@@ -25,25 +25,24 @@ project.xcworkspace
 # Android/IntelliJ
 #
 build/
-.idea
-.gradle
 local.properties
 *.iml
 # /android/
-# Android
-.idea
-.gradle
+# .idea
+# .gradle
 # local.properties
 # *.iml
 # /android/
-# build/
+
+
 android/.project
+android/.idea
 android/.gradle
 android/.settings/
 android/app/.classpath
 android/app/.project
 android/app/.settings/
-android/.project
+
 # package-lock.json
 # .history/
 
