react-native webview added

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ target 'BookStore' do
     # Pods for testing
     pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+    pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   end
 
   target 'BookStoreTests' do
