--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-snackbar": "^0.5.3",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.3.0",
+    "react-native-webview": "^5.3.1",
     "react-navigation": "2.0.1",
     "react-redux": "5.0.6",
     "redux": "3.7.2",
