--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,10 +148,12 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-snackbar')
     compile project(':react-native-webview')
     compile project(':react-native-splash-screen')
     compile project(':react-native-firebase')
     compile project(':react-native-vector-icons')
+    compile project(':react-native-razorpay')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  
