--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
 
     <application
       android:name=".MainApplication"
@@ -21,6 +22,10 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+       <meta-data
+          android:name="com.razorpay.ApiKey"
+          android:value="rzp_test_pGs9haNVuQh2Cz"
+          />
     </application>
 
 </manifest>
