--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'BookStore' do
 
     pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+    pod 'RNSnackbar', :path => '../node_modules/react-native-snackbar'
+
   end
 
   target 'BookStoreTests' do
