--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-loading-spinner-overlay": "0.5.2",
     "react-native-material-ripple": "0.8.0",
     "react-native-picker-dropdown": "^0.1.2",
+    "react-native-razorpay": "^2.0.20",
     "react-native-snackbar": "^0.5.3",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.3.0",
