--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res  --sourcemap-output index.android.sourcemap.js",
-    "test": "jest"
+    "test": "jest",
+    "ios-build": "react-native bundle --entry-file index.ios.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios  --sourcemap-output ios/main.jsbundle.map"
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
